# climbing_hold_classification

./: label.py  preprocess_image.py  test.py
image_server/: CMakeCache.txt  CMakeLists.txt  CppImgReader.py  CppImgWriter.py  Makefile  Np2Ctype.py  Np2MatType.py  ProcessImage  ProcessImage.cpp  PyImgReader.cpp  PyImgReader.hpp  PyImgWriter.hpp  cmake_install.cmake  convertColors  convertColors.cpp  dbscan.cpp  echo-client.py  linked_list.h  ml_models.py  mobile_server  mobile_server.cpp  server.cpp  tasks.py  temp.cpp  test.pgm  testMedianFilter.h  thread_utils.h
test/labels/: 2022-12-08_11-29-42_UTC_jpg.rf.14576bee94c189966da603ed6817f0b4.txt  2022-12-08_14-47-53_UTC_jpg.rf.6d60d11858d4c104cf0f49aa98fd9399.txt  2022-12-08_15-20-12_UTC_jpg.rf.12e13ef4a161d83e3db39405b4649dcb.txt  2022-12-08_15-22-26_UTC_jpg.rf.24f3a35bd63e05e6114d42253f3660df.txt  2022-12-08_19-53-13_UTC_jpg.rf.cf03e2c4aee5be26da6c10cda1263575.txt  2022-12-09_14-00-59_UTC_jpg.rf.f8006b1188e39bd18ac6253a67e245e1.txt  2022-12-09_14-47-34_UTC_jpg.rf.716788b200e80f48219b88a4be1ca11e.txt  2022-12-11_09-56-38_UTC_jpg.rf.f30c963b41cb6656926c66a7568746d6.txt  2022-12-11_10-05-56_UTC_jpg.rf.fb6010c8e8cfd20972b39d3ca29630a1.txt  2022-12-12_05-54-04_UTC_jpg.rf.db66404df561170ee1d98c413ac064bc.txt  2022-12-12_11-15-14_UTC_jpg.rf.a25e5a2f8a4e7bded3ca0bfd8f251cf3.txt  2RiDAWsqqWaSwwteT_jpg.rf.4b35dd893d246d1d434495638996c8b5.txt  2pEZSLw9ZCqX5Ncde_jpg.rf.906d0a7f48243b5ab1cb9c5d4e0c3851.txt  2xbw6YnKHbq7ev35M_jpg.rf.537376797417bd7505ada620fe64c56b.txt  (+134 more)
train/: labels.cache
(+3826 files in other folders)
